--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:site_name" content="Hunter Palcich Personal Website"></meta>
+		<meta property="og:title" content="Hunter Palcich Personal Website"></meta>
+		<meta property="og:url" content="hunterpalcich.com"></meta>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hunter Palcich Personal Website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Hunter Palcich</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
