--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:description" content="Personal Website for Hunter Palcich" />
     <meta property="og:site_name" content="Hunter Palcich Personal Website"></meta>
 		<meta property="og:title" content="Hunter Palcich Personal Website"></meta>
-		<meta property="og:url" content="hunterpalcich.com"></meta>
+		<meta property="og:url" content="https://hunterpalcich.com/"></meta>
     <meta
       name="description"
       content="Hunter Palcich Personal Website"
